agregado de formulario a index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>PANADERIA <em>CASA DE LA MIA MAMMA</em></h1>
+        <h5>Pan de altisima calidad</h5>
+    </header>
+    <main>
+        <h2>HA ELEGIDO PEDIR PRODUCTOS A DOMICILIO</h2>
+        <p>POR FAVOR RELLENE ESTE FORMULARIO</p>
+        <form action="" method="get">
+            <div>
+                <label for="">¿Cuantos productos tendrá?</label>
+                <input required type="number" >
+            </div>
+            <div>
+                <label for="">NOMBRE Y APELLIDO</label>
+                <input type="text" placeholder="COLOQUE SU NOMBRE COMPLETO">
+            </div>
+            <div>
+                <label for="">INDIQUE SU DIRECCION</label>
+                <input type="text" placeholder="COLOQUE SU DIRECCION">
+            </div>
+            <div>
+                <label for="">Indique su ciudad</label>
+                <input type="text" placeholder="COLOQUE SU ciudad">
+            </div>
+            <button type="submit">ENVIAR</button>
+            <button type="reset">LIMPIAR</button>
+        </form>
+
+    </main>
     
 </body>
 </html>
